--- a/src/componets/HomePage-Container/HomeContainer.styles.scss
+++ b/src/componets/HomePage-Container/HomeContainer.styles.scss
@@ -6,6 +6,45 @@
   padding-top: 2%;
 
   box-sizing: border-box;
+  @keyframes fadeInOverlay {
+    0% {
+      opacity: 0;
+    }
+    100% {
+      opacity: 1;
+    }
+  }
+
+  .overlay {
+    position: absolute;
+    margin-top: -2%;
+    background-color: rgba(0, 0, 0, 0.445);
+    width: 100%;
+    height: 92vh;
+    display: flex;
+    flex-direction: column;
+
+    /* Keyframe'i burada kullanalım */
+    animation: fadeInOverlay 0.5s ease-in-out forwards;
+
+    .close-overlay {
+      color: white;
+      display: flex;
+      justify-content: end;
+      box-sizing: border-box;
+
+      p {
+        cursor: pointer;
+        padding-right: 5%;
+      }
+    }
+    .trailerMovie {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 90%;
+    }
+  }
   .left-container {
     width: 40%;
     background-color: #23272b;
